fixed ryerson ece logo on mobile screens

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -430,6 +430,12 @@
 #sponsors {
     & .ru-partner {
         padding: 10px;
+
+        @media (max-width: 780px) {
+            & {
+                width: 100%;
+            }
+        }
     }
 }
 
